fix min height on small page

--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -2,7 +2,7 @@
 
 .contact {
   display: flex;
-  height: 100%;
+  min-height: 100vh;
   padding: 5em 0 5em;
 
   
