--- a/src/components/LegalMentions/styles.scss
+++ b/src/components/LegalMentions/styles.scss
@@ -2,7 +2,7 @@
 
 .legal-mentions {
   width: 90vw;
-  height: 100%;
+  min-height: 100vh;
   margin: auto;
   padding: 4em 0 4em;
 
