--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/vars';
 
 .profile {
-  height: 100%;
+  min-height: 100vh;
   margin: auto;
 
   &--title {
